[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/SBH-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Game.gd" type="Script" id=3]
[ext_resource path="res://PlayerReference.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/GameOverLayer.gd" type="Script" id=8]
[ext_resource path="res://scripts/SpaceToJump.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}
god_mode = false

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="GUI" type="CanvasLayer" parent="."]

[node name="SpaceToJump" type="Label" parent="GUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.5
margin_top = -71.0
margin_right = 54.5
margin_bottom = -57.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Press Space to jump"
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Godmode" type="Label" parent="GUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -158.5
margin_top = -95.0
margin_right = -49.5
margin_bottom = -81.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.588235, 0.517647, 0.282353, 1 )
text = "Godmode enabled"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -59.0
margin_bottom = 40.0
grow_horizontal = 0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="GUI/HBoxContainer"]
margin_top = 14.0
margin_right = 32.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SCORE:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreValue" type="Label" parent="GUI/HBoxContainer"]
margin_left = 36.0
margin_top = 14.0
margin_right = 42.0
margin_bottom = 26.0
grow_horizontal = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="GameoverScreen" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 8 )

[node name="Control" type="Control" parent="GameoverScreen"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GameoverScreen/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.12549, 0.12549, 0.12549, 0.611765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="RichTextLabel" parent="GameoverScreen/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.0
margin_top = -72.5
margin_right = 38.0
margin_bottom = -39.5
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[tornado freq=3 radius=3][center][rainbow freq=0.2 sat=10 val=20]DINO RUN[/rainbow] [/center][/tornado]"
text = "DINO RUN "
fit_content_height = true
scroll_active = false

[node name="Label" type="Label" parent="GameoverScreen/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -26.5
margin_top = -42.0
margin_right = 26.5
margin_bottom = -28.0
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton" type="LinkButton" parent="GameoverScreen/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.5
margin_top = -7.0
margin_right = 61.5
margin_bottom = 7.0
custom_fonts/font = SubResource( 1 )
text = "PRESS SPACE TO RESTART"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 4 )]
[connection signal="killed" from="Player" to="." method="_on_PlayerReference_killed"]
